# ravet_ml_end_to_end

./: README.md  app.py  constants.py  inference.py  main.py  pyproject.toml  requirements.txt  train.py
model/: iris_model.joblib
